# app/article/service/internal/server/http.go
@@ -1,16 +1,16 @@
 package server
 
 import (
-	v1 "blog/api/user/v1"
-	"blog/app/article/service/internal/conf"
+	v1 "blog/api/article/v1"
 	"blog/app/article/service/internal/service"
+	"blog/pkg/conf"
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
 )
 
 // NewHTTPServer new a HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, article *service.ArticleService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -25,7 +25,8 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	if c.Http.Timeout != nil {
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
+	//opts = append(opts, http.ErrorEncoder(blogError.ErrorEncoder))
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	v1.RegisterArticleHTTPServer(srv, article)
 	return srv
 }
